[package]
name = "survex-dist"
description = "A tool to calculate the distance between two stations in a Survex dump3d file"
authors = ["Andrew Northall <andrew@northall.me.uk>"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "survex_dist"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
pathfinding = "4.3"
ordered-float = "3.7"
prettytable-rs = "0.10.0"
